# kenny

./: .gitignore  Cargo.toml  README.md  db_schema.sql  env.example  kenny.py  main.py  questions.csv  requirements.txt  setup.sh
bot/: db.py  game_manager.py  openai_client.py  trivia.py
src/: handler.rs  lib.rs  main.rs  trivia.rs
