[package]
name = "kenny"
version = "0.1.0"
authors = ["Oscar Bonilla <6f6231@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
slack = "0.25.0"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
text_io = "0.1.8"
